--- a/style.css
+++ b/style.css
@@ -445,3 +445,10 @@ body{
     grid-template-rows :48px 48px 48px 48px 48px 48px 48px 48px 48px 48px 48px 48px 48px 48px 48px;
     margin-top: 24px;
 }
+.footer{
+    margin-top: 64px;
+    padding-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 80px;
+}
